--- a/DbView/src/main/res/values/strings.xml
+++ b/DbView/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
 <resources>
 
     <string name="app_name">DbView</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="structure">Structure</string>
+    <string name="content">Content</string>
     <string name="action_settings">Settings</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
 
 </resources>
