--- a/dbinspector/src/main/res/values/strings.xml
+++ b/dbinspector/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DbView</string>
+    <string name="app_name">DbInspector</string>
     <string name="structure">Structure</string>
     <string name="content">Content</string>
     <string name="action_settings">Settings</string>
