--- a/dbinspector/src/main/res/values/strings.xml
+++ b/dbinspector/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="dbinspector_action_copy">Copy</string>
     <string name="dbinspector_action_share">Share</string>
 
+    <string name="dbinspector_delete_database_confirm">Delete database %s?</string>
     <string name="dbinspector_clear_table_confirm">Delete the content of the table %s?</string>
 
     <string name="dbinspector_no_activity_to_handle_intent">You don\'t have application on your device that can share your Database.</string>
