Implement database renaming

--- a/dbinspector/src/main/res/values/strings.xml
+++ b/dbinspector/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="dbinspector_pragma_foreign_key">Foreign keys</string>
     <string name="dbinspector_pragma_index">Indexes</string>
 
+    <string name="dbinspector_database_name">Name</string>
+
     <string name="dbinspector_action_import">Import</string>
     <string name="dbinspector_action_clear">Clear</string>
     <string name="dbinspector_action_search">Search</string>
@@ -23,4 +25,5 @@
     <string name="dbinspector_share_database_failed">Cannot share database %s</string>
     <string name="dbinspector_copy_database_info">Database copied to application directory</string>
     <string name="dbinspector_copy_database_failed">Cannot copy database %s</string>
+    <string name="dbinspector_rename_database_error_blank">Cannot be blank</string>
 </resources>
