--- a/ExampleApp/src/main/res/values/strings.xml
+++ b/ExampleApp/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DbInspector Example App</string>
-    <string name="data_created">The test data was created, open DbInspectorActivity to view it</string>
-    <string name="action_settings">Settings</string>
-    <string name="dbinspector_app_name">DbInspector label</string>
+    <string name="app_name">DbInspector Sample</string>
+    <string name="data_created">The test data was copied, open DbInspector to view databases, tables and pragma.</string>
 
 </resources>
