--- a/ExampleApp/src/main/res/values/strings.xml
+++ b/ExampleApp/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="app_name">DbInspector Sample</string>
-    <string name="data_created">The test data was copied, open DbInspector to view databases, tables and pragma.</string>
+    <string name="data_created">The test data was copied, run DbInspector to view databases, tables and pragma.</string>
 
 </resources>
