--- a/ExampleApp/src/main/res/values/strings.xml
+++ b/ExampleApp/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DbInspector Sample</string>
+    <string name="app_name">Db Sample</string>
     <string name="data_created">The test data was copied, run DbInspector to view databases, tables and pragma.</string>
 
 </resources>
