--- a/dbinspector/src/main/res/values/strings.xml
+++ b/dbinspector/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="dbinspector_action_drop">Drop</string>
     <string name="dbinspector_action_search">Search</string>
     <string name="dbinspector_action_share">Share</string>
+    <string name="dbinspector_action_copy">Copy</string>
     <string name="dbinspector_action_settings">Settings</string>
 
     <string name="dbinspector_delete_database_confirm">Delete database %s?</string>
@@ -55,4 +56,7 @@
     <string name="dbinspector_title_confirm">Confirm</string>
     <string name="dbinspector_title_error">Error</string>
     <string name="dbinspector_title_preview">Preview</string>
+
+    <string name="dbinspector_preview_failed">Cannot copy content to clipboard</string>
+    <string name="dbinspector_preview_success">Content copied to clipboard</string>
 </resources>
