Fix launcher of no-op. Update README. Update CHANGELOG. Expose public String launcher resource.

--- a/dbinspector/src/main/res/values/strings.xml
+++ b/dbinspector/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="dbinspector_name">DbInspector</string>
 
+    <string name="dbinspector_launcher_name">@string/dbinspector_name</string>
+
     <string name="dbinspector_databases">Databases</string>
 
     <string name="dbinspector_schema">Schema</string>
