--- a/dbinspector-no-op/src/main/res/values/strings.xml
+++ b/dbinspector-no-op/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="dbinspector_name">DbInspector</string>
+    <string name="dbinspector_launcher_name">DbInspector</string>
 </resources>
