--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="dbinspector_launcher_name">Sample Debug</string>
+
     <string name="app_name">Db Sample</string>
     <string name="data_created">The test data was copied, run DbInspector to view databases, tables and pragma.</string>
 
