--- a/dbinspector/src/main/res/values/strings.xml
+++ b/dbinspector/src/main/res/values/strings.xml
@@ -34,11 +34,13 @@
     <string name="dbinspector_action_copy">Copy</string>
     <string name="dbinspector_action_settings">Settings</string>
     <string name="dbinspector_action_edit">Edit</string>
+    <string name="dbinspector_action_rename">Rename</string>
     <string name="dbinspector_action_history">History</string>
     <string name="dbinspector_action_execute">Execute</string>
     <string name="dbinspector_action_dismiss">Dismiss</string>
     <string name="dbinspector_action_delete">Delete</string>
 
+    <string name="dbinspector_rename_database_confirm">Rename database %s?</string>
     <string name="dbinspector_delete_database_confirm">Delete database %s?</string>
     <string name="dbinspector_clear_table_confirm">Delete the content of the table %s?</string>
     <string name="dbinspector_drop_view_confirm">Drop view %s?</string>
