--- a/dbinspector/src/main/res/values/strings.xml
+++ b/dbinspector/src/main/res/values/strings.xml
@@ -64,6 +64,17 @@
     <string name="dbinspector_preview_failed">Cannot copy content to clipboard</string>
     <string name="dbinspector_preview_success">Content copied to clipboard</string>
 
+    <string name="dbinspector_webserver">Web server</string>
+    <string name="dbinspector_webserver_description">Run an API and web server for remote access.</string>
+    <string name="dbinspector_webserver_address">Address</string>
+    <string name="dbinspector_webserver_running">Running</string>
+    <string name="dbinspector_webserver_not_running">Not running</string>
+    <string name="dbinspector_webserver_disabled">Disabled</string>
+    <string name="dbinspector_webserver_system_ports">Cannot use system or well-known ports</string>
+    <string name="dbinspector_webserver_dynamic_ports">Cannot use dynamic, private or ephemeral ports</string>
+    <string name="dbinspector_webserver_unsupported_port">Cannot use this port</string>
+    <string name="dbinspector_webserver_empty_port">Cannot use empty port</string>
+
     <string name="dbinspector_ignored_table_names">Ignored table names</string>
     <string name="dbinspector_ignored_table_names_description">Add or remove names of tables. When adding multiple entries, they must be comma delimited.</string>
     <string name="dbinspector_add_table_name">Add table name</string>
